Implemented spooky-festival-timer
